The padding of each section is been change

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,10 +45,10 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <div class="logo-normal">
-            <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/carousel-1.jpg'%}"style=" border-radius:5px; margin-left:50px;"width="85" height="50" alt=""></a>
+            <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/carousel-1.jpg'%}"style=" border-radius:5px; margin-left:30px;"width="85" height="50" alt=""></a>
         </div>
-        <!--<a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary">Fountain Church</h2>
+        <!-- <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+            <h2 class="m-0 text-primary"><i class="fa fa-church me-3"></i>Fountain Church</h2>
         </a>-->
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
