The padding of each section is been change

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,12 +44,12 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
-        <div class="logo-normal">
+       <!-- <div class="logo-normal">
             <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/carousel-1.jpg'%}"style=" border-radius:5px; margin-left:30px;"width="85" height="50" alt=""></a>
-        </div>
-        <!-- <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary"><i class="fa fa-church me-3"></i>Fountain Church</h2>
-        </a>-->
+        </div><i class="fa fa-church me-3"></i> -->
+         <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+            <h2 class="m-0 text-primary">Fountain Of The Living Church</h2>
+        </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -118,7 +118,6 @@
                         <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/fountainofthelivingwordng/"target="_blank"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
-
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Support link</h4>
                     <a class="btn btn-link" href="{% url 'about' %}">About Us</a>
@@ -127,7 +126,6 @@
                     <a class="btn btn-link" href="{% url 'galary' %}">Galary</a>
                     <a class="btn btn-link" href="">Privacy Policy</a>
                 </div>
-                
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Newsletter</h4>
                     <p>SignUp with your email address.</p>
