--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
             <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/carousel-1.jpg'%}"style=" border-radius:5px; margin-left:30px;"width="85" height="50" alt=""></a>
         </div><i class="fa fa-church me-3"></i> -->
          <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary">Fountain Of The Living Church</h2>
+            <h2 class="m-0 text-primary">Fountain Church</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
