--- a/templates/base.html
+++ b/templates/base.html
@@ -140,7 +140,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="https://udsen.pythonanywhere.com/"target="_blank">Senwin</a>, 2024 - Fountain of the Living Church. All Right Reserved
+                        &copy; <a class="border-bottom" href="https://senwin.pythonanywhere.com/"target="_blank">Copyright ©</a>, 2025 - Fountain of the Living Church. All Right Reserved
                     </div>
                 </div>
             </div>
