--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,6 +44,31 @@
     transition: .5s;
 }
 
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+    margin-top: 0;
+    margin-bottom: .5rem;
+    font-family: sans-serif;
+    font-weight: 700;
+    line-height: 1.2;
+    color: #181d38;
+}
+
+body {
+    margin: 0;
+    font-family: sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #52565b;
+    background-color: #fff;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+.a:hover {
+    color: #41464b;
+}
+
 .btn.btn-primary,
 .btn.btn-secondary {
     color: #FFFFFF;
