--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,6 +69,15 @@ body {
     color: #41464b;
 }
 
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+    margin-top: 0;
+    margin-bottom: .5rem;
+    font-family: Georgia;
+    font-weight: 700;
+    line-height: 1.2;
+    color: #181d38;
+}
+
 .btn.btn-primary,
 .btn.btn-secondary {
     color: #FFFFFF;
