python -m pip install Pillow t

--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -35,8 +35,8 @@
                 <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
-                            <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
-                            <h5 class="mb-3">Inspiring</h5>
+                            <i class="fa fa-3x fa-book text-primary mb-4"></i>
+                            <h5 class="mb-3">His Word</h5>
                             <p>Inspiring people to follow Jesus and fearlessly change the</p>
                         </div>
                     </div>
@@ -44,8 +44,8 @@
                 <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4"> 
-                            <i class="fa fa-3x fa-globe text- primary mb-4"></i>
-                            <h5 class="mb-3">Fountain Church Gatherings</h5>
+                            <i class="fa fa-3x fa-globe text-primary mb-4"></i>
+                            <h5 class="mb-3">His People</h5>
                             <p>Join us as we gather at one of our Fountain campuses.</p>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
                             <i class="fa fa-3x fa-home text-primary mb-4"></i>
-                            <h5 class="mb-3">Fountain Hosted Heres</h5>
+                            <h5 class="mb-3">His church</h5>
                             <p>  We bring worship services to people unable to attend church regularly</p>
                         </div>
                     </div>
