--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,8 +65,8 @@ body {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-.a:hover {
-    color: #41464b;
+a:hover {
+    color: #52565b;
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
