--- a/templates/fountainchurch/galary.html
+++ b/templates/fountainchurch/galary.html
@@ -1,7 +1,7 @@
 
 {% extends "base.html" %}
 {% load static %}
-{% block title %} Blog post {% endblock %}
+{% block title %} Galleries {% endblock %}
 {% block content%}
 
     <!-- Header Start -->
@@ -9,7 +9,7 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">Church Galary</h1>
+                    <h1 class="display-3 text-white animated slideInDown">Church Galleries</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="text-white" href="{% url 'home'%}">Home</a></li>
