--- a/templates/fountainchurch/contact.html
+++ b/templates/fountainchurch/contact.html
@@ -72,9 +72,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     {% for post in object_list %}
-                    <video autoplay muted playsinline loop width="100%" height="auto" controls style="border-radius: 5px; display: block;">
-                        <source src="{{ post.deus_magnus_contact_video.url }}" type="video/mp4">
-                        <source src="{{ post.deus_magnus_contact_video.url }}" type="video/webm">
+                    <video autoplay muted playsinline loop width="100%" height="85%" controls style="border-radius: 5px; display:block; border-radius:5px;">
+                        <source src="{{ post.contact_video.url }}" type="video/mp4">
+                        <source src="{{ post.contact_video.url }}" type="video/webm">
                         Your browser does not support the video tags.
                     </video>
                     {% endfor %}
