--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,8 +65,13 @@ body {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-a:hover {
-    color: #52565b;
+a:hover{
+    color: #ad3232;
+    text-decoration: none;
+}
+
+.footer .btn.btn-link:hover{
+    color: #d4af37;
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
