--- a/templates/base.html
+++ b/templates/base.html
@@ -23,13 +23,15 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
       <!-- Template Stylesheet -->
-    
+
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <!-- Libraries Stylesheet -->
     <link href="{% static 'lib/animate/animate.min.css' %}" rel="stylesheet">
     <link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    
+    
       
 </head>
 
@@ -45,12 +47,10 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
-       <!-- <div class="logo-normal">
-            <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/carousel-1.jpg'%}"style=" border-radius:5px; margin-left:30px;"width="85" height="50" alt=""></a>
-        </div><i class="fa fa-church me-3"></i> -->
-         <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary">Fountain Church</h2>
-        </a>
+        <div class="logo-normal">
+            <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/logo.png'%}"style=" border-radius:5px; margin-left:30px;"width="85" height="50" alt=""></a>
+        </div>
+
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -78,7 +78,7 @@
                     <div class="dropdown-menu fade-down m-0">
                         <a href="{% url 'events' %}" class="dropdown-item">News & Events</a>
                         <a href="{% url 'blog' %}" class="dropdown-item">Blog</a>
-                        <a href="{% url 'galary' %}" class="dropdown-item">Galleries</a>
+                        <a href="{% url 'galary' %}" class="dropdown-item">Gallery</a>
                     </div>
                 </div>
             </div>
