--- a/templates/fountainchurch/events.html
+++ b/templates/fountainchurch/events.html
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="section-title bg-white text-center text-primary px-3">Church News</h6>
-                <h1 class="mb-5">Popular Events</h1>
+                <h1 class="mb-5"style="color: #d4af37;">Popular Events</h1>
             </div>
             <div class="row g-4 justify-content-center">
                 {% for post in object_list %}
