--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,6 +36,10 @@
     opacity: 1;
 }
 
+.navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
+    color: #dc3545;
+}
+
 
 /*** Button ***/
 .btn {
