--- a/templates/base.html
+++ b/templates/base.html
@@ -48,9 +48,8 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <div class="logo-normal">
-            <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/logo.png'%}"style=" border-radius:5px; margin-left:30px;"width="85" height="50" alt=""></a>
+            <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/logo.jpg'%}"style=" border-radius:5px; margin-left:50px;"width="85" height="50" alt=""></a>
         </div>
-
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -61,10 +60,10 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About </a>
                     <div class="dropdown-menu fade-down m-0">
                         <a href="{% url 'about' %}" class="dropdown-item">About Us</a>
-                        <a href="{% url 'pastors' %}" class="dropdown-item">Ministers</a>
-                        
+                        <a href="{% url 'vision' %}" class="dropdown-item">Vision & Mission</a>
                     </div>
                 </div>
+                <a href="{% url 'pastors' %}" class="nav-item nav-link ">Ministers</a>
                 
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Sermons</a>
