--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Sermons</a>
                     <div class="dropdown-menu fade-down m-0">
                         <a href="{% url 'sermons' %}" class="dropdown-item"> Video Sermons</a>
-                        <a href=" " class="dropdown-item"> Audio Sermons</a>
+                        <a href="{% url 'audio_sermons' %}" class="dropdown-item"> Audio Sermons</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
