--- a/templates/fountainchurch/pastors.html
+++ b/templates/fountainchurch/pastors.html
@@ -28,7 +28,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3"> Pastors</h6>
+                <h6 class="section-title bg-white text-center text-primary px-3"> Ministers</h6>
                 <h1 class="mb-5"style="color: #d4af37;"> Fountain of the Living Church</h1>
             </div>
             <div class="row g-4 justify-content-center">
