--- a/templates/fountainchurch/audio_sermons.html
+++ b/templates/fountainchurch/audio_sermons.html
@@ -9,7 +9,7 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h6 class="display-6 text-white animated slideInDown">Fountain of the Living Word Church </h6>
+                    <h6 class="display-6 text-white animated slideInDown">Fountain</h6>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}">Home</a></li>
@@ -36,6 +36,9 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
+                            {% if post.sermon_image %}
+                            <img src="{{ post.sermon_image.url }}" class="img-fluid" alt="{{ post.audio_sermons_title }}" style="object-fit: cover; height: 250px;">
+                            {% endif %}
                             <a href="  ">
                                 <audio loop controls width="100%" height="40%" style=" width: 100%; object-fit: cover; border-radius:5px;">
                                     <source src="{{ post.audio_sermons.url }}" type="audio/mp4">
