the commit of the audio logo picture implemented

--- a/templates/fountainchurch/audio_sermons.html
+++ b/templates/fountainchurch/audio_sermons.html
@@ -9,7 +9,7 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h6 class="display-6 text-white animated slideInDown">Fountain</h6>
+                    <h6 class="display-6 text-white animated slideInDown">Sermon Archive</h6>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}">Home</a></li>
@@ -27,8 +27,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Church Sermons</h6>
-                <h1 class="mb-5"style="color: #d4af37;">Audio Sermons</h1>
+                <h6 class="section-title bg-white text-center text-primary px-3">Audio Sermons</h6>
             </div><br><br>
             <div class="row g-4 justify-content-center">
 
@@ -36,32 +35,20 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
-                            {% if post.sermon_image %}
-                            <img src="{{ post.sermon_image.url }}" class="img-fluid" alt="{{ post.audio_sermons_title }}" style="object-fit: cover; height: 250px;">
-                            {% endif %}
-                            <a href="  ">
-                                <audio loop controls width="100%" height="40%" style=" width: 100%; object-fit: cover; border-radius:5px;">
+                                <img src="{% static 'img/logo.jpg' %}" class="img-fluid" alt="Default Sermon Image" style="object-fit: cover;width:100%; height: 280px;">
+                            <a href="#">
+                                <audio loop controls width="100%" height="40%" style="width: 100%; object-fit: cover; border-radius: 5px;">
                                     <source src="{{ post.audio_sermons.url }}" type="audio/mp4">
                                     Your browser does not support the audio tag.
                                 </audio>
-                                
-                                
-                            <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                            </div>
+                            </a>
                         </div>
                         <div class="text-center p-4 pb-0">
-                            <div class="mb-3">
-                                <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
-                            </div>
                             <p class="mb-4">{{ post.audio_sermons_title|truncatechars:40 }}</p>
                         </div>
                         <div class="d-flex border-top">
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>Preaching by:{{ post.audio_sermons_preach_by }}</small>
-                            <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">{{ post.audio_Sermons_time }}</a>
+                            <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">{{ post.audio_sermons_publish_date }}</a>
                         </div>
                     </div>
                 </div>
