--- a/templates/fountainchurch/sermons.html
+++ b/templates/fountainchurch/sermons.html
@@ -9,7 +9,7 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h6 class="display-6 text-white animated slideInDown">Fountain of the Living Word Church 'Sermons' </h6>
+                    <h6 class="display-6 text-white animated slideInDown">Sermon Archive </h6>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}">Home</a></li>
@@ -27,7 +27,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Church Sermons</h6>
+                <h6 class="section-title bg-white text-center text-primary px-3">Video Sermons</h6>
             </div><br><br>
             <div class="row g-4 justify-content-center">
                 {% for post in object_list %}
@@ -39,27 +39,19 @@
                                 <source src="{{ post.sermons_video.url }}" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video></a>
-                            <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                                <a href="{%  url 'sermons_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Read More</a>
-                                <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">{{ post.Sermons_time }}</a>
-                            </div>
+                        
                         </div>
                         <div class="text-center p-4 pb-0">
                             <a href="{%  url 'sermons_detail' post.pk %}">
                              <h3 class="mb-0"style="color: #d4af37;">{{ post.sermons_title|truncatechars:15}}</h3>
                             </a>
-                            <div class="mb-3">
-                                <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
-                            </div>
+                         
                             <p class="mb-4">{{ post.sermons_description|truncatechars:70 }}</p>
                         </div>
                         <div class="d-flex border-top">
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>Preaching by:{{ post.sermons_preach_by }}</small>
-                            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>{{ post.Events_date_event }}</small>
+                           
+                            <a href="{% url 'sermons_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">{{ post.sermons_publish_date }}</a>
                         </div>
                     </div>
                 </div>
