--- a/templates/fountainchurch/audio_sermons.html
+++ b/templates/fountainchurch/audio_sermons.html
@@ -35,8 +35,9 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
+                            <a href="{%  url 'audio_sermons_detail' post.pk %}">
                                 <img src="{% static 'img/logo.jpg' %}" class="img-fluid" alt="Default Sermon Image" style="object-fit: cover;width:100%; height: 280px;">
-                            <a href="#">
+                            </a>
                                 <audio loop controls width="100%" height="40%" style="width: 100%; object-fit: cover; border-radius: 5px;">
                                     <source src="{{ post.audio_sermons.url }}" type="audio/mp4">
                                     Your browser does not support the audio tag.
@@ -47,8 +48,8 @@
                             <p class="mb-4">{{ post.audio_sermons_title|truncatechars:40 }}</p>
                         </div>
                         <div class="d-flex border-top">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>Preaching by:{{ post.audio_sermons_preach_by }}</small>
-                            <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">{{ post.audio_sermons_publish_date }}</a>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>By:{{ post.audio_sermons_preach_by }}</small>
+                            <a href="{%  url 'audio_sermons_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">{{ post.audio_sermons_publish_date }}</a>
                         </div>
                     </div>
                 </div>
