--- a/templates/fountainchurch/sermons.html
+++ b/templates/fountainchurch/sermons.html
@@ -49,7 +49,7 @@
                             <p class="mb-4">{{ post.sermons_description|truncatechars:70 }}</p>
                         </div>
                         <div class="d-flex border-top">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>Preaching by:{{ post.sermons_preach_by }}</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>By:{{ post.sermons_preach_by }}</small>
                            
                             <a href="{% url 'sermons_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">{{ post.sermons_publish_date }}</a>
                         </div>
