the commit of the audio logo picture implemented

--- a/templates/fountainchurch/events.html
+++ b/templates/fountainchurch/events.html
@@ -9,7 +9,7 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h6 class="display-6 text-white animated slideInDown">Fountain Church and Up Coming Event Activities </h6>
+                    <h6 class="display-6 text-white animated slideInDown">Church Event </h6>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}">Home</a></li>
@@ -66,9 +66,8 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Church News</h6>
-                <h1 class="mb-5"style="color: #d4af37;">Popular Events</h1>
-            </div>
+                <h6 class="section-title bg-white text-center text-primary px-3">Popular Events</h6>
+            </div><BR>
             <div class="row g-4 justify-content-center">
                 {% for post in object_list %}
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
