--- a/templates/fountainchurch/blog.html
+++ b/templates/fountainchurch/blog.html
@@ -9,7 +9,7 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">Fountain Church Blog </h1>
+                    <h1 class="display-3 text-white animated slideInDown">Church Blog </h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="text-white" href="{% url 'home'%}">Home</a></li>
@@ -29,8 +29,7 @@
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="section-title bg-white text-center text-primary px-3"> Blog Post</h6>
-                <h1 class="mb-5"style="color: #d4af37;">Church Blog</h1>
-            </div>
+            </div><br>
             <div class="row g-4 justify-content-center">
                 {% for post in object_list %}
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
