--- a/templates/fountainchurch/galary.html
+++ b/templates/fountainchurch/galary.html
@@ -29,8 +29,8 @@
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="section-title bg-white text-center text-primary px-3"> Galleries Post</h6>
-                <h1 class="mb-5"style="color: #d4af37;">Galleries</h1>
-            </div><br><br>
+             
+            </div><br>
             <div class="row g-4 justify-content-center">
                 {% for post in object_list %}
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
