A new commit -m for the adjust of the class base V

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,8 +60,7 @@
                         <a href="{% url 'vision' %}" class="dropdown-item">Vision & Mission</a>
                     </div>
                 </div>
-                <a href="{% url 'pastors' %}" class="nav-item nav-link ">Ministers</a>
-
+                <!--<a href="{% url 'pastors' %}" class="nav-item nav-link ">Ministers</a>-->
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Sermons</a>
                     <div class="dropdown-menu fade-down m-0">
@@ -73,7 +72,6 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Media</a>
                     <div class="dropdown-menu fade-down m-0">
                         <a href="{% url 'events' %}" class="dropdown-item">News & Events</a>
-                        <a href="{% url 'blog' %}" class="dropdown-item">Blog</a>
                         <a href="{% url 'galary' %}" class="dropdown-item">Gallery</a>
                     </div>
                 </div>
