A new commit -m for the adjust of the class base V

--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -65,13 +65,22 @@
     <!-- Service End -->
 
   
+
+
+
+
+
     
     <!-- About Start -->
     <div class="container-xxl py-5">
         <div class="container">
+            <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
+                <a href="{% url 'about' %}">
+                <h2 class="mb-4"style="color: #d4af37;">Welcome to Fountain Church, Weekly Activity Announcements</h2>
+                </a>
+            </div>
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
-    
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
@@ -86,26 +95,6 @@
                         </div>
                       </div>
                    </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <h2 class="mb-4"style="color: #d4af37;">Welcome to Fountain Church, Weekly Activity Announcements</h2>
-                    <p class="mb-4">Welcome to Fountain of The Living Church We’re excited to share this week’s activities and 
-                        events with you. We hope you can join us and be a part of our vibrant community</p>
-                    
-                    <div class="row gy-2 gx-4 mb-4">
-                        <div class="col-sm-10">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i> Sunday School: 8:00 AM - 9:00 AM</p>
-                        </div>
-                        <div class="col-sm-10">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i> Sunday Service: 9:00 AM - 11: AM</p>
-                        </div>
-                        <div class="col-sm-10">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i> Monday Prayer Meeting: 6:30 PM - 8:00 PM</p>
-                        </div>
-                        <div class="col-sm-10">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Wednesday Bible Study: 6:30 PM - 8:30 PM </p>
-                        </div>
-                    </div>
-                    <a class="btn btn-primary py-3 px-5 mt-2"style="border-radius: 15px;" href="{% url 'about' %}">About Us</a>
                 </div>
             </div>
         </div>
