--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -71,7 +71,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                <a href="{% url 'about' %}">
+                <a href="{% url 'events' %}">
                 <h2 class="mb-4"style="color: #d4af37;">Welcome to Fountain Church, Weekly Activity Announcements</h2>
                 </a>
             </div>
