--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -70,9 +70,9 @@
     <!-- About Start -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.3s">
                 <a href="{% url 'events' %}">
-                <h2 class="mb-4"style="color: #d4af37;">Welcome to Fountain Church, Weekly Activity Announcements</h2>
+                <h2 class="mb-4 "style="color: #d4af37;padding-left:240px;">Fountain of the living world church events</h2>
                 </a>
             </div>
             <div class="row g-5">
