A new commit -m for the adjust of the class base V

--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -72,11 +72,11 @@
         <div class="container">
             <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.3s">
                 <a href="{% url 'events' %}">
-                <h2 class="mb-4 "style="color: #d4af37;padding-left:240px;">Fountain of the living world church events</h2>
+                <h2 class="mb-4 "style="color: #d4af37;padding-left:220px;">Fountain of the living world church events</h2>
                 </a>
             </div>
             <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;width: 80%;padding-left:230px;">
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
