--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -9,7 +9,11 @@
         <div class="owl-carousel header-carousel position-relative">
             {% for first_image in first_images %}
             <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="{{ first_image.fountain_church_img_img.url }}"style="height: 610px; width: 100%; object-fit: cover;"  alt="">
+                <!--<img class="img-fluid" src="{{ first_image.fountain_church_img_img.url }}"style="height: 610px; width: 100%; object-fit: cover;"  alt="">-->
+                <video autoplay muted playsinline loop width="100%" height="40%" style="height: 250px; width: 100%; object-fit: cover; border-radius:5px;"  controls>
+                    <source src="{{ first_image.fountain_church_video.url }}" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -59,20 +63,13 @@
     </div>
     <!-- Courses End -->
 
-
-  
-
-
-
-
-
     
     <!-- About Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.3s">
                 <a href="{% url 'events' %}">
-                <h2 class="mb-4 "style="color: #d4af37;padding-left:240px;">Fountain of the living world church events</h2>
+                <h2 class="mb-4 "style="color: #d4af37;padding-left:250px;">Fountain of the living world church events</h2>
                 </a>
             </div>
             
@@ -101,10 +98,6 @@
     <!-- About End -->
 
     
-
-
-    
-
     
     <!-- Testimonial Start -->
     <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
@@ -129,7 +122,5 @@
         </div>
     </div>
     <!-- Testimonial End -->
-
-
 
     {% endblock %}
