--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -10,7 +10,7 @@
             {% for first_image in first_images %}
             <div class="owl-carousel-item position-relative">
                 <!--<img class="img-fluid" src="{{ first_image.fountain_church_img_img.url }}"style="height: 610px; width: 100%; object-fit: cover;"  alt="">-->
-                <video autoplay muted playsinline loop width="100%" height="40%" style="height: 250px; width: 100%; object-fit: cover; border-radius:5px;"  controls>
+                <video autoplay muted playsinline loop width="100%" height="100%" style="width: 100%; object-fit: cover; border-radius:5px;"  controls>
                     <source src="{{ first_image.fountain_church_video.url }}" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
