Remove deleted files from the repository

--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -24,34 +24,25 @@
 
 
      <!-- About Start -->
-     <div class="container-xxl py-5">
+     <div class="container-xxl py-5" style="background-color: #f4f4f4;">
         <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
-    
-                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                          <div class="carousel-item active">
-                            <img src="{% static 'img/intro.jpg' %}"style="height: 400px; width: 100%; object-fit: cover; border-radius:5px;" class="d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="{% static 'img/rep.jpg' %}"style="height: 400px; width: 100%; object-fit: cover; border-radius:5px;" class="d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="{% static 'img/img.jpeg' %}"style="height: 400px; width: 100%; object-fit: cover; border-radius:5px;" class="d-block w-100" alt="...">
-                          </div>
-                        </div>
-                      </div>
-                   </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <h3 class="mb-4"style="color: #d4af37;">About Fountain Of The Living Church</h3>
-                    <p class="mb-4">Fountain of the Living Word Nigeria, is a Pentecostal faith-based church, 
-                        affiliated with the Fountain of the Living Word, East Orange, 
-                        New Jersey, US.It is one of the fast growing churches with focus on God's word. We teach the truth and shape lives.</p>
+            <div class="row justify-content-center g-16">
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 30px;">
+                    <div class="wow fadeInUp" data-wow-delay="0.3s">
+                        <h3 class="mb-4" style="color: #d4af37; text-align: center; font-family: 'Playfair Display';">
+                            About Fountain Of The Living Church
+                        </h3>
+                        <p class="mb-4" style="text-align: center; font-family: 'serif';">
+                            Fountain of the Living Word Nigeria, is a Pentecostal faith-based church, 
+                            affiliated with the Fountain of the Living Word, East Orange, 
+                            New Jersey, US. It is one of the fast-growing churches with a focus on God's word. We teach the truth and shape lives.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    
     <!-- About End -->
 
 
